--- a/_posts/2023-10-07-planning.md
+++ b/_posts/2023-10-07-planning.md
@@ -1,5 +1,5 @@
 ---
-title: ✨10月份计划
+title: ✨ 10月份计划
 ---
 
 小长假转眼就结束了。
@@ -17,27 +17,27 @@ title: ✨10月份计划
 
 接来下重点解决以上问题：
 
-第一，积累内容的优先级排到最高。
+### 内容积累的优先级排到最高
 
 - **像写代码一样写文章** => 每日提交 github
 - 提高 everjapan.com 的更新频率
-- 研发日语类产品（App&小程序） => 森罗日语（五十音|语法|词汇|小测验）
+- 研发日语类产品（App&小程序） => 森罗日语
 - 继续更新日本历史 => senluoshe.com
 
-第二，运营重心不再以公众号为主。
+### 运营重心不再以公众号为主
 
 - 虽然继续保持日更，但不再注重质量
 - 分享**日本美食**
 - 分享**日语学习技巧**和**好书推荐**
 - **解读NHK纪录片**
 
-第三，拓展分发渠道。
+### 拓展分发渠道
 
 - 知乎
 - 微博
 - 喜马拉雅
 
-第四，试水直播。
+### 试水直播
 
 - 不设目标，主要为积累经验
 - 录制技术教程做实验？
